# pico-wasm-stark-verifier

./: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json  test-browser.html  test-node.mjs  test-serve.mjs
src/: lib.rs  pico.rs  pico_prism.rs
