[package]
name = "pico-wasm-stark-verifier"
version = "0.1.4"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
pico-vm = { git = "https://github.com/ethproofs/pico.git", package = "pico-vm", branch = "wasm-stark-verifier" }

# Wasm bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
bincode = "1.3.3"

# Error handling
anyhow = "1.0"

# Console logging for debugging
console_error_panic_hook = "0.1"

# Fix for getrandom in Wasm
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

# Optimize for size in release builds
[profile.release]
opt-level = "s"
lto = true
